Manifest/backstage/ingress-backstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage-manual
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Cuando el certificado esté listo (secret backstage-tls). Si usas otro Ingress Controller ajusta anotaciones.
spec:
  tls:
    - hosts:
        - backstage.local
      secretName: backstage-tls
  rules:
    - host: backstage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
